Fix image & collapse behaviors

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,10 +1,15 @@
+$primary-color: rgb(102, 46, 199);
+$secondary-color: #ccc;
+$background-color: #f5f5f5;
+
+
 .collapsible-button {
   position: fixed;
   top: 24px;
   right: 24px;
   z-index: 1;
-  background-color: #0d5bae;
-  color: white;
+  background-color: $primary-color;
+  color: $background-color;
   padding: 10px;
   border: none;
   border-radius: 6px;
@@ -13,8 +18,8 @@
 
 // Button to close 
 .close-button {
-  color: #0d5bae;
-  background-color: white;
+  color: $primary-color;
+  background-color: $background-color;
   padding: 10px;
   border: none;
   border-radius: 6px;
@@ -31,23 +36,23 @@
   margin-right: 10px;
   padding: 20px;
   border-radius: 5px;
-  border: 1px solid #ccc;
-  background-color: white;
+  border: 1px solid $secondary-color;
+  background-color: $background-color;
 }
 
 .playlist-track-form input {
   max-width: 95%;
   margin-bottom: 10px;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid $secondary-color;
   border-radius: 3px;
 }
 
 .submit-button {
   max-width: 100%;
   padding: 10px;
-  background-color: blue;
-  color: white;
+  background-color: $primary-color;
+  color: $background-color;
   border: none;
   border-radius: 3px;
   cursor: pointer;
@@ -63,8 +68,7 @@
   max-width: 100%;
   margin-bottom: 10px;
   padding: 10px;
-  border: 1px solid #ccc;
-  background-color: white;
+  border: 1px solid $secondary-color;
   border-radius: 3px;
 }
 
@@ -88,7 +92,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  // flex: content;
+  object-fit: cover;
 }
 .container {
   align-items: center;
@@ -101,20 +105,19 @@
 }
 
 // Desktop
-@media (min-width: 768px) {
+@media (min-width: 601px) {
   .container {
     right: 20px;
   }
 }
 
 // Mobile
-@media (max-width: 767px) {
+@media (max-width: 600px) {
   .container {
     bottom: 20px;
     right: 0;
   }
 }
-
 
 
 //// General row, column and spacer
